test/cherry/Language/const_errors.cherry
# RUN: not cherry-driver -dump=mlir %s 2>&1 | FileCheck %s

fn main(): UInt64 {
  const values: Float32[2] = [1.0, 2.0];
  values[0] = 3.0;

  0
}

# CHECK: error: cannot assign to const variable
